# Pour-just-one-cup

./: .gitignore  README.md  README_ARM.md  README_VISION.md  README_VOICE.md  README_cn.md  app.py  config.yaml  hand_eye_result.json  setup.py  start_vision.sh  test.py  yolo_3d.py  yolo_bpu_detect_only.py
LeArm/: .mxproject  LeArm.ioc
LeArm/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  usart.h
LeArm/Core/Src/: adc.c  dma.c  gpio.c  i2c.c  main.c  spi.c  stm32f1xx_it.c  tim.c  usart.c
LeArm/Hiwonder/: global.h
LeArm/Hiwonder/Arm/Inc/: kinematics.h  robot_arm.h
LeArm/Hiwonder/Arm/src/: LeArm.lib  robot_arm.c  robot_arm.c.old.c
LeArm/Hiwonder/Chassis/Inc/: differential_chassis.h  mecanum_chassis.h
LeArm/Hiwonder/Chassis/Src/: differential_chassis.c  mecanum_chassis.c
LeArm/Hiwonder/Middlewares/Inc/: lwrb.h
LeArm/Hiwonder/Peripherals/Inc/: adc_sample.h  avoid_obstacles.h  buzzer.h  conveyor_belt.h  led.h  motor_module.h  oled.h  pwm_servos.h  qmi8658.h  serial_servo.h  stepper_strip.h  touch.h  ultrasound.h  w25q64.h  wonder_echo.h  wonder_mv.h
LeArm/Hiwonder/Peripherals/Src/: adc_sample.c  avoid_obstacles.c  buzzer.c  conveyor_belt.c  led.c  motor_module.c  oled.c  pwm_servos.c  qmi8658.c  serial_servo.c  stepper_strip.c  touch.c  ultrasound.c  w25q64.c  wonder_echo.c  wonder_mv.c
LeArm/Hiwonder/Portings/Inc/: app_porting.h  ps2_porting.h
LeArm/Hiwonder/Portings/Src/: app_porting.c  led_porting.c  ps2_porting.c  pwm_servo_porting.c
LeArm/MDK-ARM/: LeArm.uvoptx  LeArm.uvprojx  prompt.md  startup_stm32f103xb.s
LeArm/MDK-ARM/.eide/: eide.yml  env.ini  files.options.yml
arm_base/: CMakeLists.txt  package.xml
arm_base/include/arm_base/: arm_base.h  update.md
arm_base/launch/: arm_bringup.launch.py
arm_base/src/: arm_base.cpp
arm_cmd/: CMakeLists.txt  package.xml
arm_cmd/include/arm_cmd/: arm_cmd.h
arm_cmd/src/: arm_cmd.cpp
arm_msg/: CMakeLists.txt  package.xml
arm_msg/msg/: ArmStatus.msg  GripperCmd.msg
arm_task/: package.xml  setup.cfg  setup.py
arm_task/arm_task/: tea_task_node.py
arm_task/launch/: tea_task.launch.py
arm_test/: CMakeLists.txt  package.xml
arm_test/config/: hand_eye_calibration.yaml
arm_test/launch/: ik_bringup.launch.py
arm_test/scripts/: calib_collect.py  hand_eye_calibrate.py  ik_node.py  test_sequence.py
calibration_data/: hand_eye_result.json
calibration_data3/: hand_eye_result.json
calibration_data_4/: hand_eye_result.json
calibration_data_5/: hand_eye_result.json
calibration_data_6/: hand_eye_result.json
core/providers/asr/: fun_local.py  xunfei_stream.py
core/providers/tools/: ros2_arm_client.py  ros2_drone_client.py
data/: .config.yaml
docs/: camera_arm_calibration.md  hand_eye_calibration_guide.md  usart_transmit.md  机械臂上位机软件设计.md
plugins_func/functions/: ros2_arm_control.py  ros2_drone_control.py
tools/: asr_only_test.py  asr_to_llm_text_test.py  rdkx5_audio_bridge.py  ros2_drone_service_client.py  serial_debug.py  serial_test.py
